# relay-knowledge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.sh  check.sh  pyproject.toml  run.sh  self-iterate.sh  setup.bat  setup.sh
.github/workflows/: benchmark-checks.yml  code_quality.yml  pages.yml  pr-checks.yml  release.yml
.knowledge/: knowledge-map.yaml
docs/: README.md  code-repository-tree-sitter-retrieval.md  code-review-graph-capabilities.md  documentation-refresh-audit-2026-05-14.md  graphrag-capability-guide.md  hybrid-retrieval-context-pack.md  semantic-vector-provider-backend.md
docs/benchmarks/: relay-teams-baseline-2026-05-14.md  relay-teams-optimization-issues-2026-05-14.md  relay-teams-optimization-study-2026-05-14.md
docs/en/: README.md  code-repository-tree-sitter-retrieval.md  documentation-refresh-audit-2026-05-14.md  graphrag-capability-guide.md  hybrid-retrieval-context-pack.md  semantic-vector-provider-backend.md
docs/research/: agent-protocol-graph-retrieval-research.md  arxiv-knowledge-graph-paper-insights.md  code-repository-tree-sitter-retrieval-research.md  industry-capability-snapshot-2026.md  knowledge-graph-research.md  relay-knowledge-implementation-reference.md
docs/specs/: advanced-architecture-observability.md  background-service-and-self-healing.md  code-repository-retrieval-v2-optimization.md  code-repository-tree-sitter-retrieval.md  code-review-graph-capabilities.md  engineering-hard-constraints.md  foundational-runtime.md  graphrag-product-and-implementation-roadmap.md  installation-and-release.md  knowledge-graph-capability-reference.md  open-agent-runtime-and-hybrid-retrieval-architecture.md  resident-agent-graph-retrieval-access.md  semantic-vector-provider-backend.md  source-scope-and-multimodal-ingestion.md  storage-layer-design.md  unified-api-and-interface-architecture.md
docs/user-guide/: 02-cli-basics.md  (+8 more)
pages/: index.html
src/: api.rs  application.rs  lib.rs  main.rs
tests/: cli_format.rs  project_smoke.rs  unified_api.rs
tools/self_iteration/: Cargo.toml  README.md  README.zh-CN.md  __init__.py  cases.json  codex_driver.py  evaluator.py  file_fixture_eval.py  history.py  llm_judge.py  memory.py  ranked_case_scoring.py  scoring.py  self_iterate.py  workspace_git.py
tools/self_iteration/cases/: agent_workflow_targets.json  file_background_targets.json  repository_bash_syntax_fixture_targets.json  repository_bash_targets.json  repository_c_syntax_fixture_targets.json  repository_c_targets.json  repository_config_document_syntax_fixture_targets.json  repository_cpp_syntax_fixture_targets.json  repository_cpp_targets.json  repository_cross_language_syntax_fixture_targets.json  repository_csharp_syntax_fixture_targets.json  repository_csharp_targets.json  repository_go_syntax_fixture_targets.json  repository_go_targets.json  repository_grep_budget_targets.json  repository_index_performance_targets.json  repository_java_syntax_fixture_targets.json  repository_java_targets.json  repository_javascript_syntax_fixture_targets.json  repository_javascript_targets.json  repository_kotlin_syntax_fixture_targets.json  repository_kotlin_targets.json  repository_multi_repository_targets.json  repository_multilang_targets.json  repository_nonstandard_layout_targets.json  repository_opencode_targets.json  repository_php_syntax_fixture_targets.json  repository_php_targets.json  repository_python_syntax_fixture_targets.json  repository_python_targets.json  repository_relationship_challenge_application_targets.json  repository_relationship_challenge_system_targets.json  repository_relationship_extended_challenge_application_targets.json  repository_relationship_extended_challenge_system_targets.json  repository_relationship_extended_regression_targets.json  repository_relationship_regression_targets.json  repository_ruby_syntax_fixture_targets.json  repository_ruby_targets.json  repository_rust_syntax_fixture_targets.json  repository_rust_targets.json  (+7 more)
tools/self_iteration/src/: cases.rs  codex.rs  command.rs  config.rs  evaluator.rs  evaluator_agent.rs  evaluator_judge.rs  evaluator_repo_set.rs  evaluator_tail.rs  evaluator_tests.rs  git_ops.rs  history.rs  history_synthesis.rs  main.rs  memory.rs  research_plan.rs  scoring.rs  scoring_ranked.rs  scoring_tests.rs  unattended.rs
tools/self_iteration/tests/: test_codex_driver.py  test_evaluator.py  test_evaluator_files.py  test_history.py  test_llm_judge.py  test_memory.py  test_patch_flow.py  test_scoring.py
web/: index.html  package-lock.json  package.json
(+1220 files in other folders)
