[package]
name = "relay-knowledge"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Graph-database-based knowledge graph project."
license = "MIT"
repository = "https://github.com/coolplayagent/relay-knowledge"

[lib]
path = "src/relay_knowledge/lib.rs"

[[bin]]
name = "relay-knowledge"
path = "src/relay_knowledge/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints.rust]
unsafe_code = "forbid"
