[package]
name = "relay-knowledge"
version = "1.0.9"
edition = "2024"
rust-version = "1.85"
description = "Graph-database-based knowledge graph project."
license = "MIT"
repository = "https://github.com/coolplayagent/relay-knowledge"
readme = "README.md"
keywords = ["knowledge-graph", "graphrag", "retrieval", "sqlite", "mcp"]
categories = ["command-line-utilities", "database", "development-tools"]

[lib]
path = "src/relay_knowledge/lib.rs"

[[bin]]
name = "relay-knowledge"
path = "src/relay_knowledge/main.rs"

[[test]]
name = "benchmarks"
path = "tests/benchmarks/main.rs"

[dependencies]
axum = "0.8.9"
futures-util = "0.3"
getrandom = "0.2"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "metrics", "reqwest-client", "reqwest-rustls", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "hooks", "limits"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.10", features = ["limit", "timeout", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tree-sitter = "0.26.8"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-scala = "0.26.0"
tree-sitter-swift = "0.7.2"
tree-sitter-typescript = "0.23.2"

[lints.rust]
unsafe_code = "forbid"
