[package]
name = "relay-knowledge-self-iteration"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Independent high-concurrency self-iteration harness for relay-knowledge."
license = "MIT"
publish = false

[[bin]]
name = "relay-knowledge-self-iterate"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[lints.rust]
unsafe_code = "forbid"
